# cqedraw

./: .gitignore  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
assets/: icon.icns
bbq_circuit_designer/: __init__.py  __main__.py  cli.py
cqedraw/: __init__.py  __main__.py  app.py  cli.py  core.py  desktop_canvas.py  desktop_dialogs.py  desktop_merge.py  desktop_models.py  desktop_project_state.py  desktop_selection.py  web_bridge.py
docs/: launch-copy.md
packaging/: pyinstaller_entry.py
scripts/: generate_icons.py  source_size_report.py
tests/: __init__.py  test_bbq_circuit_designer.py  test_cli.py  test_core.py  test_cqedraw.py  test_web_bridge.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/public/: CNAME  manifest.webmanifest  robots.txt  sitemap.xml  sw.js
web/src/: AnalysisLineChart.tsx  AnalysisParameterPanel.tsx  App.tsx  AppDialogs.tsx  AppToolbar.tsx  CircuitCanvas.tsx  CircuitEdgeShape.tsx  InspectorPanel.tsx  ModalAnalysisPlots.tsx  OutputDrawer.tsx  TutorialOverlay.tsx  analysis.ts  appMetadata.ts  chartMath.ts  csvExport.ts  edgeGeometry.ts  exampleProject.ts  graph.ts  graphConcatenate.ts  outputDefaults.ts  parameterUnits.ts  projectState.ts  pyodideClient.ts  styles.css  sweepState.ts  tutorialFlow.ts  types.ts  useAppShortcuts.ts  useCanvasInteractionHandlers.ts  useCanvasViewport.ts  useClipboardWorkflow.ts  useConcatenateWorkflow.ts  useEngineWarmup.ts  useInlineEdgeEditor.ts  useModalAnalysisActions.ts  useOutputGeneration.ts  useOutputPanelScroll.ts  useProjectHistory.ts  useProjectLifecycle.ts  useSelectionActions.ts  (+4 more)
web/src/styles/: base.css  canvas.css  dialogs.css  layout.css  output-actions.css  output-analysis.css  output-state.css  responsive.css  tutorial.css
web/src/test/: analysis.test.ts  crawlMetadata.test.ts  edgeGeometry.test.ts  graph.test.ts  outputDefaults.test.ts  parameterUnits.test.ts  pyodideClient.test.ts
web/src/workers/: pyodideWorker.ts
web/tests/: analysis.spec.ts  concatenate.spec.ts  cqedraw-web.spec.ts  edge-rendering.spec.ts  fixtures.ts  helpers.ts  keyboard-selection.spec.ts  many-variables.spec.ts  output-generation.spec.ts  project-persistence.spec.ts  tutorial.spec.ts
