[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbq-circuit-designer"
version = "0.1.0"
description = "Tkinter GUI for drawing BBQ circuits and generating capacitance and inverse-inductance matrix snippets."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Joan Caceres", email = "contact@joancaceres.com"}
]
keywords = [
    "black box quantization",
    "BBQ",
    "superconducting circuits",
    "circuit design",
    "tkinter",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=2.0,<3",
    "scipy>=1.15,<2",
    "sympy>=1.13,<2",
]

[project.optional-dependencies]
sccircuits = [
    "sccircuits @ git+https://github.com/joanjcaceres/sccircuits.git",
]
dev = [
    "pytest>=8.4,<9",
]

[project.scripts]
bbq-circuit-designer = "bbq_circuit_designer.app:main"

[project.urls]
Homepage = "https://github.com/joanjcaceres/bbq-circuit-designer"
Repository = "https://github.com/joanjcaceres/bbq-circuit-designer"
Issues = "https://github.com/joanjcaceres/bbq-circuit-designer/issues"

[tool.setuptools.packages.find]
include = ["bbq_circuit_designer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
