[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cqedraw"
version = "0.2.0"
description = "Draw superconducting circuit graphs and generate capacitance and inverse-inductance matrix snippets."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Joan Caceres", email = "contact@joancaceres.com"}
]
keywords = [
    "black box quantization",
    "BBQ",
    "superconducting circuits",
    "circuit design",
    "tkinter",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=2.0,<3",
    "scipy>=1.15,<2",
    "sympy>=1.13,<2",
]

[project.optional-dependencies]
sccircuits = [
    "sccircuits @ git+https://github.com/joanjcaceres/sccircuits.git",
]
native = [
    "pillow>=10,<12",
    "pyinstaller>=6.0,<7",
]
test = [
    "pytest>=8.4,<9",
]
dev = [
    "build>=1.2,<2",
    "pillow>=10,<12",
    "pyinstaller>=6.0,<7",
    "pytest>=8.4,<9",
]

[project.scripts]
cqedraw = "cqedraw.cli:main"

[project.urls]
Homepage = "https://github.com/joanjcaceres/cqedraw"
Repository = "https://github.com/joanjcaceres/cqedraw"
Issues = "https://github.com/joanjcaceres/cqedraw/issues"

[tool.setuptools.packages.find]
include = ["cqedraw*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
